feat: add new language Russian

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div class="center">
+        <section id="langSection">
+            <div class="langFiltr" id="langEnglish">English</div>
+            <div class="langFiltr" id="langRussian">Russian</div>
+          </section>
         <h2 >Input your message</h2>
         <textarea name="codeArea" id="codeArea" cols="30" rows="10"></textarea>
         <h2 for="secretWord">Input your secret word</h2>
